--- a/thankyou.html
+++ b/thankyou.html
@@ -3,30 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ačiū – Medinukas</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
+  <title>Ačiū už užsakymą</title>
+  <link rel="icon" href="assets/logo.jpg" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="header-inner">
       <a href="index.html" class="logo">Medinukas</a>
-      <nav class="site-nav">
-        <ul>
-          <li><a href="index.html">Pagrindinis</a></li>
-          <li><a href="products.html">Produktai</a></li>
-          <li><a href="contact.html">Kontaktai</a></li>
-        </ul>
-      </nav>
     </div>
   </header>
 
-  <section class="contact-hero">
-    <div class="contact-hero-overlay"></div>
-    <div class="contact-hero-content">
+  <section class="hero">
+    <div class="hero-overlay"></div>
+    <div class="hero-content">
       <h1>Ačiū už Jūsų užsakymą!</h1>
       <p>Susisieksime su Jumis kaip įmanoma greičiau.</p>
-      <a href="index.html" class="btn-primary">Grįžti į pradžią</a>
+      <a href="index.html" class="btn-primary">Grįžti į pagrindinį</a>
     </div>
   </section>
 </body>
