--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="twitter:title" content="Medinukas – rankų darbo medžio dirbiniai">
   <meta name="twitter:description" content="Unikalūs medžio dirbiniai, pagaminti su meile.">
   <meta name="twitter:image" content="https://medinukas.com/assets/social-preview.jpg">
-
+<meta name="google-site-verification" content="m9HyA29U4VFYUqJNABYn9N9QSbscVJTyY1lqWl-bJOk" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
 </head>
