--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
   <title>Medinukas – rankų darbo medžio dirbiniai</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="assets/logo.jpg" type="image/x-icon" />
   <link rel="shortcut icon" href="assets/logo.jpg" type="image/x-icon" />
 
   <!-- SEO / Meta -->
   <meta name="description" content="Rankų darbo medžio dirbiniai – unikalūs, kokybiški mediniai gaminiai su meile.">
   <meta property="og:title" content="Medinukas – rankų darbo medžio dirbiniai">
   <meta property="og:description" content="Unikalūs medžio dirbiniai, pagaminti su meile.">
-  <meta property="og:image" content="https://medinukas.com/assets/social-preview.jpg">
+  <meta property="og:image" content="https://medinukas.com/assets/wood-bg.jpg">
   <meta property="og:url" content="https://medinukas.com/">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Medinukas – rankų darbo medžio dirbiniai">
   <meta name="twitter:description" content="Unikalūs medžio dirbiniai, pagaminti su meile.">
-  <meta name="twitter:image" content="https://medinukas.com/assets/social-preview.jpg">
+  <meta name="twitter:image" content="https://medinukas.com/assets/wood-bg.jpg">
 <meta name="google-site-verification" content="m9HyA29U4VFYUqJNABYn9N9QSbscVJTyY1lqWl-bJOk" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
