--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,8 @@
         </div>
 
         <form id="order-form" action="https://formsubmit.co/medinukaslazdijai@gmail.com" method="POST">
-          <input type="hidden" name="_redirect" value="https://medinukas.com/thankyou.html">
+         <input type="hidden" name="_next" value="https://medinukas.com/thankyou.html">
+
           <input type="hidden" name="_subject" value="Naujas užsakymas iš svetainės">
           <input type="hidden" name="_captcha" value="false">
           <input type="hidden" name="_template" value="table">
