--- a/contact.html
+++ b/contact.html
@@ -40,19 +40,35 @@
         <form id="order-form" action="https://formsubmit.co/medinukaslazdijai@gmail.com" method="POST">
   <!-- Pakeisk _redirect į _next -->
   <input type="hidden" name="_next" value="https://medinukas.com/thankyou.html">
+
   <input type="hidden" name="_subject" value="Naujas užsakymas iš svetainės">
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_template" value="table">
 
   <div class="contact-form">
     <input type="text" name="Vardas" id="name" placeholder="Vardas" required />
-    <input type="email" name="El. paštas" id="email" placeholder="El. paštas" />
-    <input type="tel" name="Telefonas" id="phone" placeholder="Telefono numeris" />
+    <input type="email" name="El. paštas" id="email" placeholder="El. paštas">
+    <input type="tel" name="Telefonas" id="phone" placeholder="Telefono numeris">
     <input type="text" name="Užsakomas gaminys" id="product" placeholder="Užsakomas gaminys" required />
     <textarea name="Adresas" id="address" rows="4" placeholder="Adresas (siuntimui)" required></textarea>
     <button type="submit">Siųsti užsakymą</button>
   </div>
 </form>
+<div id="contact-error" style="color: red; margin-top: 10px; display: none;"></div>
+<script>
+  document.getElementById('order-form').addEventListener('submit', function(e) {
+    var email = document.getElementById('email').value.trim();
+    var phone = document.getElementById('phone').value.trim();
+    var errorDiv = document.getElementById('contact-error');
+    if (!email && !phone) {
+      e.preventDefault();
+      errorDiv.textContent = "Įveskite bent el. paštą arba telefoną.";
+      errorDiv.style.display = "block";
+    } else {
+      errorDiv.style.display = "none";
+    }
+  });
+</script>
 
       </div>
     </div>
